# Web-EcommerceProject

./: .gitignore  README.md  key_access_rights_patch.sh  webTool  webTool.bat
.webTool/: README.md  config.json
.webTool/.ssh/: web-tp-projet-02-04  web-tp-projet-02-04.pub
tp-projet/: .djlintrc  .dockerignore  .env.development.example  .env.example  .env.production.example  .flake8  .gitignore  .gitlab-ci.yml  .htmlvalidate.json  CHECKLIST.txt  CONSIGNES_PEDAGOGIQUES.md  DEPLOYED.txt  DEPLOYMENT.md  DOC_INDEX.md  Dockerfile  LICENSE  PROJET_INFO.md  QUICKSTART.md  README.md  README_BADGES.md  RECAP.txt  SETUP_COMPLETE.md  VISUAL_GUIDE.md  app.py  chargeur.py  classes_models.dot  config.py  docker-compose.yml  et --hard 22112a4  generate_uml.sh  pyproject.toml  railway.toml  render.yaml  requirements.txt  run.py  setup.sh
tp-projet/datafixtures/: import_all.py  import_categories.py  import_products.py  import_users.py
tp-projet/datafixtures/json/: categories.json  product_images.json  products.json  users.json
tp-projet/src/api/: __init__.py  routes.py
tp-projet/src/auth/: __init__.py  routes.py  utils.py
tp-projet/src/auth/templates/: profile.html  register.html
tp-projet/src/auth/templates/auth/: login.html  register.html
tp-projet/src/cart/: __init__.py  routes.py  services.py
tp-projet/src/cart/templates/cart/: index.html
tp-projet/src/catalog/: __init__.py  routes.py
tp-projet/src/catalog/templates/: product_detail.html  products.html
tp-projet/src/models/: __init__.py  cart.py  cart_item.py  category.py  product.py  product_image.py  user.py
tp-projet/src/templates/: base.html  index.html
tp-projet/src/templates/auth/: login.html  login_block.html  profile.html  register.html
tp-projet/static/css/: style.css
tp-projet/static/js/: cart.js  profile.js  user.js
